Bug#57088 missing SET_ERROR calls in ndb_mgm_get_version()  - Replace the printouts for proper calls to SET_ERROR